build: fix fa3x build rules
Signed-off-by: Nikita Piatygorskiy <generalhammond16@gmail.com>

--- a/schnorr/Makefile
+++ b/schnorr/Makefile
@@ -3,14 +3,13 @@ TSRC = schnorr.c test.c
 OBJ = $(SRC:%.c=%.o)
 TOBJ = $(TSRC:%.c=%.o)
 
-CFLAGS += -msse -msse2 -msse3 -msse4.1 -msha
 LDLIBS += -lcheck -lgmp
 
 %.o: %.c
 	@echo CC $<
 	$(CC) $(CFLAGS) -o $@ $<
 	
-all: bench.exe
+all: bench
 
 bench: $(OBJ)
 	@echo LD $<
