ffs: add feige fiat shamir indification implementation
Signed-off-by: Nikita Piatygorskiy <generalhammond16@gmail.com>

--- a/ffs/Makefile
+++ b/ffs/Makefile
@@ -1,22 +1,19 @@
-TARGET = libgmptools.a
-
-SRC = gmptools.c sha256.c
-TSRC = gmptools.c sha256.c test.c
+SRC = benchmark.c ffs.c
+TSRC = test.c ffs.c
 OBJ = $(SRC:%.c=%.o)
 TOBJ = $(TSRC:%.c=%.o)
 
-CFLAGS += -mrdrnd -msse4.1 -msha
-LDLIBS += -lgmp
+LDLIBS += -lgmptools -lgmp
 
 %.o: %.c
 	@echo CC $<
 	$(CC) $(CFLAGS) -o $@ $<
-
-all: $(TARGET)
 	
-$(TARGET): $(OBJ)
-	@echo AR $<
-	$(AR) rsc -o $@ $^
+all: bench
+
+bench: $(OBJ)
+	@echo LD $<
+	$(LD) -o $@ $^ $(LDLIBS) $(LDFLAGS) 
 
 test: $(TOBJ)
 	@echo LD $<
@@ -29,10 +26,10 @@ memtest:
 .PHONY: runtest
 runtest:
 	@-./test.exe
-	
+
 .PHONY: clean
-clean:	
+clean:
+	@$(RM) bench.exe
 	@$(RM) test.exe
-	@$(RM) $(TARGET)
 	@$(RM) $(OBJ)
 	@$(RM) $(TOBJ)
