gq: add Guillou-Quisquater protocol implementation
Signed-off-by: Nikita Piatygorskiy <generalhammond16@gmail.com>

--- a/gq/Makefile
+++ b/gq/Makefile
@@ -1,5 +1,5 @@
-SRC = benchmark.c fa3x.c
-TSRC = fa3x.c test.c
+SRC = benchmark.c gq.c
+TSRC = gq.c test.c
 OBJ = $(SRC:%.c=%.o)
 TOBJ = $(TSRC:%.c=%.o)
 
